Fixed a bunch of margins/paddings on mobile site. Changed Starred button to look like others.

--- a/app/assets/stylesheets/mobile/mobile.css.scss
+++ b/app/assets/stylesheets/mobile/mobile.css.scss
@@ -143,7 +143,7 @@ body{
 		position: fixed;
 		background-color: #ffcc66;
 		opacity: 1;
-		min-height: 70px;
+		min-height: 63px;
 		min-width: 100%;
 		z-index: 0;
 		left: 0;
@@ -155,7 +155,7 @@ body{
 	}
 
 	#pcf-logo{
-		max-height: 70px;
+		max-height: 68px;
 		float: left;
 		display: inline-block;
 		position: fixed;
@@ -183,21 +183,7 @@ body{
 		#nav-top{
 			display: block;
 			width: 100%;
-			height: 35px;
-				
-			.nav-starred {
-			  list-style: none;
-				display: inline-block;
-				background-color: #f5f6f6;
-				padding: 0;
-				margin: 1px 3px;
-				border-radius: 0;
-				float: left;
-			}
-			nav-starred:hover{
-				background-color: #e1e1e1;
-			}
-
+			height: 30px;
 			#venue-drop{
 				float: left;
 				border: 0px;
@@ -206,11 +192,13 @@ body{
 			}
 
 			#venuefilter{
-				margin: 1px 3px;
+				font-size: 14px;
+				margin: 1px 0px;
 				border: 0px;
 				color: $white;
 				overflow: hidden;
 				background-color: transparent;
+				padding-bottom: 0px;
 			}
 			#venuefilter:hover,
 			#venuefilter:focus{
@@ -218,16 +206,38 @@ body{
 				border: 0px;
 				color: $gold;
 			}
+			
+			.nav-starred {
+			  list-style: none;
+				display: inline-block;
+				background-color: transparent;
+
+				margin: 1px 0px 1px 3px;
+				padding: 0px 8px 0px 8px;
+				border-radius: 0;
+				float: left;
+				#starredfilter{
+					font-size: 14px;
+					background-color: transparent;
+					color: #ffffff;
+					border: 0;
+					margin-top:1px;
+					margin-bottom:1px;
+					padding: 6px 0px 0px 0px;
+				}
+			}
 
 			.loginnout{
 				display: inline-block;
 				float: right;
 				.innout-btn{
-					margin: 1px 3px;
+					margin: 1px 3px 1px 0px;
 					float: right;
 					border: 0px;
 					color: $white;
 					background-color: transparent;
+					padding-bottom: 0px;
+					font-size: 14px;
 				}
 				.innout-btn:hover,
 				.innout-btn:focus{
@@ -269,11 +279,16 @@ body{
 			display: block;
 			width: 100%;
 			height: 35px;
+			
 			.nav-day {
+				position:relative;
 				list-style: none;
 				display: block;
 				float: left;
 				white-space: nowrap;
+				width: auto;
+				margin-left:12px;
+				margin-right:auto;
 
 				#navm{
 					overflow-x: scroll;
@@ -318,7 +333,8 @@ body{
 	
 	h2.date-header {
 		letter-spacing: 1.5px;
-		padding: 20px 0px 10px 0px;
+		padding: 20px 0px 5px 5px;
+		margin-bottom: 5px;
 		color: $gold;
 		font-size: 20px;
 		font-family: $font-datehead;
@@ -331,7 +347,8 @@ body{
 		margin: 0;
 	}
 	#all-events{
-		padding-top: 60px;
+		padding-top: 45px;
+		margin: 0px 5px 0px 5px;
 	}
 
 	.panel{
@@ -343,6 +360,7 @@ body{
 		.event-contain{
 			background-color: $white;
 			width: 100%;
+			height:auto;
 			padding: 5px;
 			display: block;
 			-webkit-box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
@@ -355,12 +373,13 @@ body{
 					display: inline-block;
 				}
 				.social-icon-contain{
-					max-width: 30%;
+					max-width: 40%;
 					display: inline-block;
 					float: right;
 					.social-icon{
 						cursor: pointer;
 						width: $icon-size;
+						margin-right: 3px;
 					}
 				}
 			}
@@ -370,11 +389,12 @@ body{
 				width: 100%;
 				h2{
 					font-weight: 500;
-					margin-bottom: 0;
-					margin-right: 5px;
+					margin-top: 10px;
+					margin-bottom: 0px;
 				}
 				p.event_time{
 					margin: 0;
+					margin-top: 3px;
 					color: $dark-gray;
 				}
 				#venuename{
@@ -397,7 +417,7 @@ body{
 				.star_filled {
 					background:url('../star_filled.png') no-repeat ;
 					background-size: 25px 25px;
-					margin: 2px 3px;
+					margin: 0px 6px;
 					padding: 0;
 					border: none;
 					width:25px;
